Vil pinne bytebuddy til versjon som bygger og fungerer.